--- a/views/player/ingame.ejs
+++ b/views/player/ingame.ejs
@@ -41,8 +41,8 @@
       });
 
       //When the host clicks start game, the player screen changes
-      socket.on('gameStartedPlayer', function () {
-        window.location.href = '/playergameblock' + '?id=' + socket.io.engine.id;
+      socket.on('gameStartedPlayer', function (data) {
+        window.location.href = '/playergameblock' + '?id=' + socket.io.engine.id+'&count='+data.count;
       });
     </script>
   </body>
