--- a/views/player/playergameblock.ejs
+++ b/views/player/playergameblock.ejs
@@ -2,228 +2,251 @@
 <html>
 <%- include('../partials/header', {title}); %>
 
-  <body>
-    <!-- Answer Choices -->
+<body>
+  <div id="message-container" class="mcontainer">
     <h2 id="message"></h2>
-    <div class="mcontainer">
-      <div id="stats">
-        <h4 id="nameText">Name:</h4>
-        <h4 id="scoreText">Score:</h4>
-        <h4 id="rankText"></h4>
+    <div id="stats">
+      <h4 id="nameText">Name:</h4>
+      <h4 id="scoreText">Score:</h4>
+      <h4 id="rankText"></h4>
+    </div>
+  </div>
+<div class="container" id="ansContainer">
+  <!-- Answer Choices -->
+  <div id='answers'>
+    <ul id='multiple' class="row" style="margin-top: 30px;" data-tag="Answers" hidden>
+      <li class="col-lg-6 row py-2 " data-question-id="" data-id="">
+        <div class="col-12 align-self-center ">
+          <div class=" input-group px-2">
+            <i> <img src="/images/kirmizi.png" alt=""></i>
+            <input data-tag="text" class="answer1text form-control form-control-lg" type="button" value="Answer-1"
+              readonly id="answer1"
+              style="background-color: #eb1c1c; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+
+      </li>
+
+      <li class="col-lg-6 row  py-2 " data-question-id="" data-id="">
+
+        <div class="col-12 align-self-center ">
+          <div class="input-group  px-2">
+            <i><img src="/images/mavi.png" alt=""></i>
+            <input data-tag="text" class="answer2text form-control form-control-lg" type="button" value="Answer-2"
+              readonly id="answer2"
+              style="background-color: rgb(3, 81, 182); color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+      </li>
+
+      <li class="col-lg-6 row py-2 " data-question-id="" data-id="">
+
+        <div class="col-12 align-self-center">
+          <div class=" input-group px-2 ">
+            <i><img src="/images/sari.png" alt=""></i>
+            <input data-tag="text" class="answer3text form-control form-control-lg" type="button" value="Answer-3"
+              readonly id="answer3"
+              style="background-color: #eec71a;; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+
+      </li>
+
+      <li class="col-lg-6 row py-2  ">
+        <div class="col-12 align-self-center">
+          <div class=" input-group px-2">
+            <i><img src="/images/yesil.png" alt=""></i>
+            <input data-tag="text" class="answer4text form-control form-control-lg" type="button" value="Answer-4"
+              readonly id="answer4"
+              style="background-color: #228b03; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
+          </div>
+        </div>
+      </li>
+    </ul>
+    <div id="truefalse" class="row" style="margin-top: 50px;" data-tag="Answers" hidden>
+
+      <div class="col-6  ">
+        <div class="col-12 align-self-center">
+          <div class=" input-group px-2">
+            <i><img src="/images/yesil.png" alt=""></i>
+            <input data-tag="text" class="answer1text form-control form-control-lg" type="button" value="True" readonly
+              style="background-color: #228b03; color: white; font-weight: 500; border: none;">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-6 ">
+
+        <div class="col-12 align-self-center ">
+
+          <div class=" input-group px-2">
+            <i> <img src="/images/kirmizi.png" alt=""></i>
+            <input data-tag="text" class="answer2text form-control form-control-lg" type="button" value="False" readonly
+              style="background-color: #eb1c1c; color: white; font-weight: 500; border: none;">
+          </div>
+        </div>
       </div>
     </div>
-    <div class="container" id="ansContainer">
-      <ul class="row" style="margin-top: 30px;" data-tag="Answers">
-        <li class="col-lg-6 row py-2" data-question-id="" data-id="">
-          <div class="col-12 align-self-center ">
-            <div class=" input-group px-2">
-              <i> <img src="/images/kirmizi.png" alt=""></i>
-              <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-1" id="answer1"
-                onclick="answerSubmitted(1)" readonly
-                style="background-color: #eb1c1c; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-            </div>
-          </div>
-        </li>
-        <li class="col-lg-6 row  py-2" data-question-id="" data-id="">
-          <div class="col-12 align-self-center ">
-            <div class="input-group  px-2">
-              <i><img src="/images/mavi.png" alt=""></i>
-              <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-2" id="answer2"
-                onclick="answerSubmitted(2)" readonly
-                style="background-color: rgb(3, 81, 182); color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-            </div>
-          </div>
-        </li>
-        <li class="col-lg-6 row py-2" data-question-id="" data-id="">
-          <div class="col-12 align-self-center"id="answer3">
-            <div class=" input-group px-2 ">
-              <i><img src="/images/sari.png" alt=""></i>
-              <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-3" 
-                onclick="answerSubmitted(3)" readonly
-                style="background-color: #eec71a;; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-            </div>
-          </div>
-        </li>
-        <li class="col-lg-6 row py-2">
-          <div class="col-12 align-self-center"id="answer4">
-            <div class=" input-group px-2">
-              <i><img src="/images/yesil.png" alt=""></i>
-              <input data-tag="text" class=" form-control form-control-lg" type="button" value="Answer-4" 
-                onclick="answerSubmitted(4)" readonly
-                style="background-color: #228b03; color: white; font-weight: 500; border: none; font-family:Arial, Helvetica, sans-serif">
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-   
-   
-    
-    <!-- <div class="container" id="ansContainer2">
-      <ul class="row" style="margin-top: 50px;" data-tag="truefalse">
-        <li class="col-6  row  ">
-          <div class="col-12 align-self-center">
-            <div class="input-group px-2">
-              <i><img src="/images/yesil.png" alt=""></i>
-              <input data-tag="text" class=" form-control form-control-lg" type="text" value="True" readonly
-                style="background-color: #228b03; color: white; font-weight: 500; border: none;">
-            </div>
-          </div>
-        </li>
-        <li class="col-6 row " data-question-id="" data-id="" id="ansContainer">
-          <div class="col-12 align-self-center ">
-            <div class=" input-group px-2">
-              <i> <img src="/images/kirmizi.png" alt=""></i>
-              <input data-tag="text" class=" form-control form-control-lg" type="text" value="False" readonly
-                style="background-color: #eb1c1c; color: white; font-weight: 500; border: none;">
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div> -->
+  </div>
+  <!-- $('#answers .answer1text') -->
+</div>
+  <%- include('../partials/footer') %>
 
-    <!-- OLD STUFF -->
-    <!-- OLD STUFF -->
+  <script>
+    $(document).ready(function () {
+      var socket = io();
+      var playerAnswered = false;
+      var correct = false;
+      var name;
+      var score = 0;
+      var quetionType;
+      var urlParams = new URLSearchParams(window.location.search);
 
-
-
-    <%- include('../partials/footer') %>
-
-      <script>
-        var socket = io();
-        var playerAnswered = false;
-        var correct = false;
-        var name;
-        var score = 0;
-        var quetionType;
-        var urlParams = new URLSearchParams(window.location.search);
-
-        const params = {
-          id: urlParams.get("id"),
-        };
-        console.log(params)
-
-        socket.on("connect", function () {
-          //Tell server that it is host connection from game view
-          socket.emit("player-join-game", params);
-          document.getElementById("ansContainer").style.visibility = "visible";
-          //document.getElementById("ansContainer2").style.visibility = "none";
-          // document.getElementById("answer1").style.visibility = "visible";
-          // document.getElementById("answer2").style.visibility = "visible";
-          // document.getElementById("answer3").style.visibility = "visible";
-          // document.getElementById("answer4").style.visibility = "visible";
-        });
-
-        // socket.on("noGameFound", function () {
-        //   window.location.href = "../../"; //Redirect user to 'join game' page
-        // });
-
-        function answerSubmitted(num) {
-          if (playerAnswered == false) {
-            playerAnswered = true;
-
-            socket.emit("playerAnswer", num); //Sends player answer to server
-
-            //Hiding buttons from user
-            document.getElementById("ansContainer").style.visibility = "hidden";
-            //document.getElementById("ansContainer2").style.visibility = "hidden";
-
-            // document.getElementById("answer2").style.visibility = "hidden";
-            // document.getElementById("answer3").style.visibility = "hidden";
-            // document.getElementById("answer4").style.visibility = "hidden";
-            document.getElementById("message").style.display = "block";
-            document.getElementById("message").innerHTML =
-              "Answer Submitted! Waiting on other players...";
-          }
+      const params = {
+        id: urlParams.get("id"),
+        count: urlParams.get('count')
+      };
+      console.log(params)
+      if (params.count == 2) {
+          $('#multiple').css('display', 'none').prop('hidden', true);
+          $(`#truefalse li`).each(function (index) {
+            $('this').on('click',index+1,answerSubmitted);
+          });
+          $('#truefalse').css('display', 'flex').prop('hidden', false);
+        } else {
+          $('#truefalse').css('display', 'none').prop('hidden', true);
+          $(`#multiple li`).each(function (index) {
+            $('this').on('click',index+1,answerSubmitted);
+          });
+          $('#multiple').css('display', 'flex').prop('hidden', false);
         }
 
-        //Get results on last question
-        socket.on("answerResult", function (data) {
+      socket.on("connect", function () {
+        //Tell server that it is host connection from game view
+        socket.emit("player-join-game", params);
+        // document.getElementById("ansContainer").style.visibility = "visible";
+        //document.getElementById("ansContainer2").style.visibility = "none";
+        // document.getElementById("answer1").style.visibility = "visible";
+        // document.getElementById("answer2").style.visibility = "visible";
+        // document.getElementById("answer3").style.visibility = "visible";
+        // document.getElementById("answer4").style.visibility = "visible";
+      });
 
-          console.log("asnwer", data)
-          if (data == true) {
-            correct = true;
-          }
-        });
+      // socket.on("noGameFound", function () {
+      //   window.location.href = "../../"; //Redirect user to 'join game' page
+      // });
 
-        socket.on("questionOver", function (data) {
-          console.log("questionOver", data)
-          if (correct == true) {
-            document.body.style.backgroundColor = "#4CAF50";
-            document.getElementById("message").style.display = "block";
-            document.getElementById("message").innerHTML = "Correct!";
-          } else {
-            document.body.style.backgroundColor = "#f94a1e";
-            document.getElementById("message").style.display = "block";
-            document.getElementById("message").innerHTML = "Incorrect!";
-          }
-          document.getElementById("ansContainer").style.visibility = "hidden";
+      function answerSubmitted(num) {
+        if (playerAnswered == false) {
+          playerAnswered = true;
+
+          socket.emit("playerAnswer", num); //Sends player answer to server
+
+          //Hiding buttons from user
+          // document.getElementById("ansContainer").style.visibility = "hidden";
           //document.getElementById("ansContainer2").style.visibility = "hidden";
 
           // document.getElementById("answer2").style.visibility = "hidden";
           // document.getElementById("answer3").style.visibility = "hidden";
           // document.getElementById("answer4").style.visibility = "hidden";
-          socket.emit("getScore");
-        });
+          document.getElementById("message").style.display = "flex";
+          document.getElementById("message").innerHTML =
+            "Answer Submitted! Waiting on other players...";
+        }
+      }
 
-        socket.on("newScore", function (data) {
-          document.getElementById("scoreText").innerHTML = "Score: " + data;
-        });
+      //Get results on last question
+      socket.on("answerResult", function (data) {
 
-        socket.on("nextQuestionPlayer", function (data) {
-          correct = false;
-          playerAnswered = false;
-          console.log("data!!!!!!", data)
-          if (data == 4) {
-            //document.getElementById("ansContainer2").style.visibility = "none";
-            document.getElementById("answer3").style.visibility = "visible";
-          document.getElementById("answer4").style.visibility = "visible";
+        console.log("answer", data)
+        if (data == true) {
+          correct = true;
+        }
+      });
 
-          }
-          if (data == 2) {
-            console.log("dadaatatatat222222")
-            document.getElementById("answer3").style.visibility = "hidden";
-          document.getElementById("answer4").style.visibility = "hidden";
-
-          }
-          //document.getElementById("ansContainer").style.visibility = "visible";
-          // document.getElementById("answer1").style.visibility = "visible";
-          // document.getElementById("answer2").style.visibility = "visible";
-          // document.getElementById("answer3").style.visibility = "visible";
-          // document.getElementById("answer4").style.visibility = "visible";
-          //document.getElementById("message").style.display = "none";
-          document.body.style.backgroundColor = "white";
-
-        });
-
-        socket.on("hostDisconnect", function () {
-          window.location.href = "/";
-        });
-
-        socket.on("playerValues", function (data) {
-          console.log(data)
-          for (var i = 0; i < data.length; i++) {
-            if (data[i].playerId == socket.io.engine.id) {
-              document.getElementById("nameText").innerHTML = "Name: " + data[i].name;
-              document.getElementById("scoreText").innerHTML =
-                "Score: " + data[i].values.score;
-            }
-          }
-        });
-
-        socket.on("GameOver", function () {
-          console.log("gameover")
-          document.body.style.backgroundColor = "#FFFFFF";
+      socket.on("questionOver", function (data) {
+        console.log("questionOver", data)
+        if (correct == true) {
+          document.body.style.backgroundColor = "#4CAF50";
           document.getElementById("message").style.display = "block";
-          document.getElementById("message").innerHTML = "GAME OVER";
-          document.getElementById("ansContainer").style.visibility = "hidden";
-          // document.getElementById("answer1").style.visibility = "hidden";
-          // document.getElementById("answer2").style.visibility = "hidden";
-          // document.getElementById("answer3").style.visibility = "hidden";
-          // document.getElementById("answer4").style.visibility = "hidden";
-        });
-      </script>
+          document.getElementById("message").innerHTML = "Correct!";
+        } else {
+          document.body.style.backgroundColor = "#f94a1e";
+          document.getElementById("message").style.display = "block";
+          document.getElementById("message").innerHTML = "Incorrect!";
+        }
+        document.getElementById("ansContainer").style.visibility = "hidden";
+        //document.getElementById("ansContainer2").style.visibility = "hidden";
 
-  </body>
+        // document.getElementById("answer2").style.visibility = "hidden";
+        // document.getElementById("answer3").style.visibility = "hidden";
+        // document.getElementById("answer4").style.visibility = "hidden";
+        socket.emit("getScore");
+      });
+
+      socket.on("newScore", function (data) {
+        document.getElementById("scoreText").innerHTML = "Score: " + data;
+      });
+
+      socket.on("nextQuestionPlayer", function (count) {
+        correct = false;
+        playerAnswered = false;
+        console.log("data!!!!!!", count);
+        $('#message-container').css('display', 'none').prop('hidden', true);
+        $('#ansContainer').css('display', 'flex').prop('hidden', false);
+        if (count == 2) {
+          $('#multiple').css('display', 'none').prop('hidden', true);
+          $(`#truefalse li`).each(function (index) {
+            $('this').on('click',index+1,answerSubmitted);
+          });
+          $('#truefalse').css('display', 'flex').prop('hidden', false);
+        } else {
+          $('#truefalse').css('display', 'none').prop('hidden', true);
+          $(`#multiple li`).each(function (index) {
+            $('this').on('click',index+1,answerSubmitted);
+          });
+          $('#multiple').css('display', 'flex').prop('hidden', false);
+        }
+        //document.getElementById("ansContainer").style.visibility = "visible";
+        // document.getElementById("answer1").style.visibility = "visible";
+        // document.getElementById("answer2").style.visibility = "visible";
+        // document.getElementById("answer3").style.visibility = "visible";
+        // document.getElementById("answer4").style.visibility = "visible";
+        //document.getElementById("message").style.display = "none";
+        document.body.style.backgroundColor = "white";
+
+      });
+
+      socket.on("hostDisconnect", function () {
+        window.location.href = "/";
+      });
+
+      socket.on("playerValues", function (data) {
+        console.log(data)
+        for (var i = 0; i < data.length; i++) {
+          if (data[i].playerId == socket.io.engine.id) {
+            document.getElementById("nameText").innerHTML = "Name: " + data[i].name;
+            document.getElementById("scoreText").innerHTML =
+              "Score: " + data[i].values.score;
+          }
+        }
+      });
+
+      socket.on("GameOver", function () {
+        console.log("gameover")
+        document.body.style.backgroundColor = "#FFFFFF";
+        document.getElementById("message").style.display = "block";
+        document.getElementById("message").innerHTML = "GAME OVER";
+        document.getElementById("ansContainer").style.visibility = "hidden";
+        // document.getElementById("answer1").style.visibility = "hidden";
+        // document.getElementById("answer2").style.visibility = "hidden";
+        // document.getElementById("answer3").style.visibility = "hidden";
+        // document.getElementById("answer4").style.visibility = "hidden";
+      });
+    });
+  </script>
+
+</body>
 
 </html>
